# neuroml-ai

./: .gitignore  .gitmodules  MANIFEST.in  Readme.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  ruff.yml
data/: Readme.md  single-markdown.md
data/neuroml_docs.db/bff2fca6-e941-436e-8bd7-d762f8cd8303/: index_metadata.pickle
data/neuroml_docs_bge-m3.db/333e410f-8bd5-4c14-83de-759b7376f16b/: index_metadata.pickle
data/neuroml_docs_bge-m3.db/5b99cb15-7cd9-45e5-9327-e0750c753422/: index_metadata.pickle
data/neuroml_docs_embeddinggemma_latest.db/bd580e0e-aeb3-4d14-8bbc-43a2a11920a7/: index_metadata.pickle
data/neuroml_docs_text_bge-m3.db/73abd1b6-1531-444d-8533-d6bc88c4d085/: index_metadata.pickle
data/neuroml_docs_text_bge-m3.db/fb6c9f5d-988d-4e89-aebc-ef6604028eba/: index_metadata.pickle
data/scripts/: Readme.md  generate-single-nml-md.sh
docker/: Dockerfile
neuroml_ai/: cli.py  rag.py  schemas.py  stores.py  streamlit_ui.py  utils.py
neuroml_ai/api/: chat.py  main.py
neuroml_ai/data/files/: nml-docs-single-page.md
neuroml_ai/data/neuroml_docs_text_ollama_bge-m3.db/df765687-c6ef-467d-a7c2-f65b950d06ec/: index_metadata.pickle
neuroml_ai/mcp/: utils.py
neuroml_ai/mcp/server/: answers.py  codegen.py  main.py  server.py
neuroml_ai/mcp/tools/: answer_tools.py  code_tools.py  codegen_tools.py
neuroml_ai/rag/: rag.py  schemas.py  stores.py  utils.py
scripts/: devstack.sh  docker-deploy.sh  generate-single-nml-md.sh  jupyterbook2singlemd.py  run-docker.sh
tests/: test_mcp.py  test_rag.py  test_stores.py
(+9 files in other folders)
